Implemented new Config&VL system (DID NOT TEST YET, PLEASE TEST FOR ME KTHX)

--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,5 @@ The first one makes more sense IMO. If you have any suggestions let me know.
 -Make movement checks more stable so there is no need for a large buffer. I still need to have a buffer for setback purposes, but I can find another way.
 
 -Make KillauraF's RaycastUtils more accurate (player ping etc...)
+
+-Implement "max-vl", "vl-decay", and "vl-delay"
